<resources>
    <string name="app_name">NadaTech</string>
    <string name="ok">OK</string>

    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="register">Register</string>
    <string name="inventory">Inventory</string>
    <string name="cancel">Cancel</string>
    <string name="connect_reader_menu_item_text">Connect Reader</string>
    <string name="change_reader_menu_item_text">Change Reader</string>
    <string name="disconnect_reader_menu_item_text">Disconnect Reader</string>
    <string name="reset_reader_menu_item_text">Reset Reader</string>

    <string name="no_rfid_device_connected">No RFID Device Connected</string>
    <string name="rfid_device_enable_for_check_in">RFID Device Enable for Check-In</string>
    <string name="available_nearby_devices">Available NearBy Devices :</string>
    <string name="searching_for_nearby_rfid_devices">Searching for nearby RFID Devices…</string>
    <string name="no_device_found_please_try_again">No Device Found… Please try again</string>
    <string name="find_item">Find Item</string>
    <string name="epc">EPC</string>
    <string name="enter_epc_for_find_item">Enter EPC for find item</string>
    <string name="start_search">Start Search</string>
    <string name="stop_search">Stop Search</string>
    <string name="searching_epc_item">Searching EPC item…</string>
    <string name="please_enter_epc_number">Please Enter EPC Number</string>
    <string name="please_wait">Please Wait</string>
    <string name="stop_scan">Stop Scan</string>
    <string name="start_scan">Start Scan</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="assets_registration">Asset Registration</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure, you want to logout?</string>
    <string name="part_number">Part Number</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="description">Description</string>
    <string name="asset_id_name">Asset ID / Name</string>
    <string name="serial_number">Serial Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="asset_properties">Asset Properties</string>
    <string name="asset_image">Asset Image</string>
    <string name="tag_id">Tag ID</string>
    <string name="scan_tag_id">+ Scan Item</string>
    <string name="view_all">View All</string>
    <string name="reset_all">Reset All</string>
    <string name="clear_all">Clear All</string>
    <string name="register_asset">Register Asset</string>
    <string name="no_data_found">No Data Found</string>
    <string name="total_scanned_s">Total Scanned : %s</string>
    <string name="scanned_items">Scanned Items</string>
    <string name="please_enter_part_number">Please select part number or contact administrator if part number not found in list.</string>
    <string name="please_enter_part_name">Please enter part name.</string>
    <string name="please_enter_asset_id_name">Please enter asset id / name</string>
    <string name="please_enter_sr_no">Please enter serial number</string>
    <string name="please_select_asset_expiry_date">Please select asset expriry date</string>
    <string name="please_select_location">Please select location or contact administrator if location not found in list.</string>
    <string name="please_scan_asset">Please scan asset</string>
    <string name="string_with_colon">%s :</string>
    <string name="filter">Filter</string>
    <string name="asset_status">Asset Status</string>
    <string name="checked_out_to">Checked Out To</string>
    <string name="inventory_detail">Inventory Detail</string>
    <string name="asset_type">Asset Type</string>
    <string name="asset_category">Asset Category</string>
    <string name="part">Part</string>
    <string name="checked_out">Checked Out</string>
    <string name="in_stock">In Stock</string>
    <string name="idle_asset_date">Idle Asset (Date)</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="one_time">One Time</string>
    <string name="continues">Continues</string>
    <string name="done">Done</string>
    <string name="check_in_notes">Check-in Notes</string>
    <string name="check_in_notes_optional">Check-in Notes (Optional)</string>
    <string name="check_out_notes">Checkout Notes</string>
    <string name="check_out_notes_optional">Checkout Notes (Optional)</string>
    <string name="move_item_notes_optional">Move items Notes (Optional)</string>
    <string name="username">Username</string>
    <string name="enter_user_name">Please enter username</string>
    <string name="enter_password">Please enter password</string>
    <string name="no_locations_found">No locations found</string>
    <string name="no_part_found">No part list found</string>
    <string name="all">All</string>
    <string name="no_asset_categories_found">No asset categories found</string>
    <string name="no_asset_type_found">No asset type found</string>
    <string name="locate_item">Locate Item</string>
    <string name="check_in_location">Check-In Location</string>
    <string name="profile">Profile</string>
    <string name="close">Close</string>
    <string name="scan_type">Scan Type :</string>
    <string name="asset_allow_to_move">Asset Allow To Move</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="enter_location_name">Enter location name</string>
    <string name="enter_location_code">Enter location code</string>
    <string name="add_location">Add Location</string>
    <string name="update_location">Update Location</string>
    <string name="move_item">Move item</string>
    <string name="move_item_to_location">Move item to the location</string>
    <string name="add_new">Add new</string>
    <string name="manufactor">Manufacture</string>
    <string name="isexpired">isExpired?</string>
    <string name="isserial">IsSerial</string>
    <string name="update">Update</string>
    <string name="add_part">Add Part</string>
    <string name="add_manufacturer">Add Manufacturer</string>
    <string name="code">Code</string>
    <string name="name">Name</string>
    <string name="part_list">Part List</string>

</resources>