<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.ScanRFIDActivity">

        <include layout="@layout/layout_toolbar" />

        <com.nada.tech.views.TextView
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/scan_type" />

        <RadioGroup
            android:id="@+id/rbgScanType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp">

            <RadioButton
                android:id="@+id/rbOneTime"
                style="@style/RadioStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/one_time" />

            <RadioButton
                android:id="@+id/rbContinue"
                style="@style/RadioStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:text="@string/continues" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnScan"
            style="@style/ButtonWhiteStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:minWidth="@dimen/_120sdp"
            android:onClick="@{(v)->clickListener.onClick(v)}"
            android:text="@string/start_scan" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp">

            <com.nada.tech.views.TextView
                android:id="@+id/txtTotalEpc"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Total EPC : 0" />

            <com.nada.tech.views.TextView
                android:id="@+id/txtTotalCount"
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="Total Scan Count : 0" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/grey" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.nada.tech.views.TextView
                android:id="@+id/txtError"
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="@string/no_device_found_please_try_again"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingVertical="@dimen/_5sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_rfid_tag" />
        </RelativeLayout>

        <View
            android:id="@+id/viewActionButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/linActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnApply"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_weight="1"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:text="@string/done" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnClear"
                style="@style/ButtonWhiteStyle"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_weight="1"
                android:onClick="@{(v)->clickListener.onClick(v)}"
                android:text="@string/clear_all" />
        </LinearLayout>
    </LinearLayout>
</layout>